@@ -1,5 +1,7 @@
 CHANGES IN VERSION 1.3.15
 ------------------------
+ o geom_tiplab and geom_tiplab2 support using geom_label2 by passing geom="label" <2016-04-07, Thu>
+ o geom_label2 that support subsetting <2016-04-07, Thu>
  o geom_tiplab2 for adding tip label of circular layout <2016-04-06, Wed>
  o use plot$plot_env to access ggplot2 parameter <2016-04-06, Wed>
  o geom_taxalink for connecting related taxa <2016-04-01, Fri> 
